added screenshot folder to gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,10 @@ Thumbs.db
 # Testing
 # ======================
 coverage/
+
+
+
+# ======================
+# Screenshots
+# ======================
+screenshots/
