added to todo list to gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ coverage/
 # Screenshots
 # ======================
 screenshots/
+
+# ======================
+# ToDO
+# ======================
+ToDO.md
